version 1.1.5
- Gtk2 version: Make selection dialog tall enough for wls,
  tsls and ar model selections
- Model window, graph menu: if there are two independent vars,
  offer the option of a 3D fitted/actual plot
- Set sampl range: in this dialog, give as default the current
  sample range, not the full data range
- When a session uses data imported from a database, be smarter
  on saving the session: ensure the script includes a command
  to open a datafile (get this saved first if need be)
- Database browser window: close this when a database is
  selected
- GUI model windows: allow drawing of graphs relating to model
  data, even if the sample has been changed since the model
  was estimated

10/06/2003 version 1.1.4
- Make auto-entry of varname for sampling with dummy smarter
- Fixes for display of data values with huge datasets
- Fix to handle "weird" cases in plotting frequency distributions
- Auto-detect gnuplot's ability to use "filledcurve" style
- Translate a few untranslated strings in gtk-1.2 version
- Graph labels: make 3 labels configurable rather than just 2
- Editing gnuplot commands: fix for accented characters
- Reading CSV files: fix bug in parser for date strings
- NLS: ensure messages printed to the console are not in utf8
- Loosen up a little on "Appending" data: allow for the situation
  where the sample range for the added data is not identical
  to the original range
- Fixes for printout of fitted, actual and residual, and for
  forecasts with standard errors, in the case of missing data
- Fix to gtk2 data spreadsheet (quell warning on appending an
  observation)
- Data spreadsheet: give a warning on close if there are unsaved
  changes
- Improvements to printing of data values in certain numerical
  ranges
- Import of CSV or plain text data: if no variable names are
  given, construct them automatically ("v1", "v2", etc.)
- 3-D plot command: fix for localized decimal point, and use
  rxvt to control gnuplot if xterm is not available
