@@ -121,8 +121,8 @@ GtkItemFactoryEntry model_items[] = {
       MODEL_GENR, NULL },
     { N_("/_LaTeX"), NULL, NULL, 0, "<Branch>" },
     { N_("/LaTeX/_View"), NULL, NULL, 0, "<Branch>" },
-    { N_("/LaTeX/View/_Tabular"), NULL, view_latex, 0, NULL },
-    { N_("/LaTeX/View/_Equation"), NULL, view_latex, 1, NULL },
+    { N_("/LaTeX/View/_Tabular"), NULL, view_latex, LATEX_VIEW_TABULAR, NULL },
+    { N_("/LaTeX/View/_Equation"), NULL, view_latex, LATEX_VIEW_EQUATION, NULL },
     { N_("/LaTeX/_Save"), NULL, NULL, 0, "<Branch>" },
     { N_("/LaTeX/Save/_Tabular"), NULL, NULL, 0, "<Branch>" },
     { N_("/LaTeX/Save/Tabular/as _document"), NULL, file_save, 
