@@ -141,8 +141,10 @@ GtkItemFactoryEntry model_items[] = {
       MODEL_GENR, NULL, GNULL },
     { N_("/_LaTeX"), NULL, NULL, 0, "<Branch>", GNULL },
     { N_("/LaTeX/_View"), NULL, NULL, 0, "<Branch>", GNULL },
-    { N_("/LaTeX/View/_Tabular"), NULL, view_latex, 0, NULL, GNULL },
-    { N_("/LaTeX/View/_Equation"), NULL, view_latex, 1, NULL, GNULL },
+    { N_("/LaTeX/View/_Tabular"), NULL, view_latex, 
+      LATEX_VIEW_TABULAR, NULL, GNULL },
+    { N_("/LaTeX/View/_Equation"), NULL, view_latex, 
+      LATEX_VIEW_EQUATION, NULL, GNULL },
     { N_("/LaTeX/_Save"), NULL, NULL, 0, "<Branch>", GNULL },
     { N_("/LaTeX/Save/_Tabular"), NULL, NULL, 0, "<Branch>", GNULL },
     { N_("/LaTeX/Save/Tabular/as _document"), NULL, file_save, 
