@@ -3,7 +3,7 @@ version 1.1.5
   tsls and ar model selections
 - Model window, graph menu: if there are two independent vars,
   offer the option of a 3D fitted/actual plot
-- Set sampl range: in this dialog, give as default the current
+- Set sample range: in this dialog, give as default the current
   sample range, not the full data range
 - When a session uses data imported from a database, be smarter
   on saving the session: ensure the script includes a command
@@ -13,6 +13,7 @@ version 1.1.5
 - GUI model windows: allow drawing of graphs relating to model
   data, even if the sample has been changed since the model
   was estimated
+- Model table: make a LaTeX preview available
 
 10/06/2003 version 1.1.4
 - Make auto-entry of varname for sampling with dummy smarter
